--- a/style.css
+++ b/style.css
@@ -11,7 +11,15 @@
     font-family: 'Times New Roman', Times, serif;
 }
 
+.receipe_card{
+    width: 900px;
+    margin: 0 auto;
+}
+
 nav li {
     text-decoration: none;
     display: inline-block;
+}
+p {
+    margin: ;
 }
